<?xml version="1.0"?>
<package>
  <name>face</name>
  <version>0.0.1</version>
  <description>The poli_msgs package</description>

  <maintainer email="reuben.aronson@tufts.edu">Reuben Aronson</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosserial_python</run_depend>

  <export>
  </export>
</package>
