cmake_minimum_required(VERSION 2.8.3)
project(face)


find_package(catkin REQUIRED COMPONENTS
)

## Generate messages in the 'msg' folder
# add_message_files(
#   FILES
#   Message1.msg
#   Message2.msg
# )

## Generate services in the 'srv' folder
#add_service_files(
#)

## Generate added messages and services with any dependencies listed here
#generate_messages(
#  DEPENDENCIES
#)

catkin_package(  
)

